Refactor code to improve performance and readability

--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,8 @@
 }
 body{
     background-color: teal;
+    font-size: medium;
+    font-family: 'Times New Roman', Times, serif;
 }
 title{
     color:gold;
