Update form labels and text alignment

--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@ body{
     font-size: medium;
     font-family: 'Times New Roman', Times, serif;
     color:gold;
-    text-align: center;
+    text-align: left;
     font-family: 'Times New Roman', Times, serif;
     font-size: large;
 }
