--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,13 @@
     color:gold;
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
+    font-size: xx-large;
+
+}
+.title1{
+    color:gold;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
     font-size: large;
 }
 body{
@@ -11,5 +18,42 @@ body{
     color:gold;
     text-align: left;
     font-family: 'Times New Roman', Times, serif;
-    font-size: large;
+    font-size: small;
+}
+.input_field{
+
+
+    background-color: black;
+    color: gold;
+    font-size: small;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+    
+}
+.survey-form{
+    background-color: teal;
+    color: gold;
+    font-size: small;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: left;
+}
+.radio{
+    background-color: teal;
+    color: gold;
+    font-size: small;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: left;
+    .radio {
+        flex-direction: column;
+        display: flex;
+        align-items: left;
+    }
+}
+.citi{
+    background-color: teal;
+    color: gold;
+    font-size: small;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: left;
+    justify-content: flex-start;
 }
