--- a/src/style.css
+++ b/src/style.css
@@ -11,5 +11,23 @@ body{
     color:gold;
     text-align: left;
     font-family: 'Times New Roman', Times, serif;
-    font-size: large;
+}
+.button{
+    background-color: gold;
+    color: teal;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    font-family: 'Times New Roman', Times, serif;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+label{
+    color:gold;
+    font-size: 12px;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: left;
+    
 }
