--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,17 @@
 .title {
-font-family: 'Times New Roman', Times, serif;
-text-align: center;
-color: turquoise;
+    color:aquamarine;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+    font-size: 50px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 .h1 {
-font-family: 'Times New Roman', Times, serif;
-text-align: center;
-color: turquoise;
+    color: aquamarine;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+    font-size: 25px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+   
 }
