--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,14 @@
     margin-bottom: 25px;
    
 }
+.img1{ 
+    position: absolute;
+    left: 0px;
+    width: 300px;
+    border: 3px solid #73AD21;
+    padding: 10px;
+}
+html {
+    background-color: black;
+    color:aquamarine;
+}
