--- a/src/styles.css
+++ b/src/styles.css
@@ -13,16 +13,25 @@
     font-size: 25px;
     margin-top: 25px;
     margin-bottom: 25px;
-   
+   font-size: medium;
 }
 .img1{ 
-    position: absolute;
-    left: 0px;
-    width: 300px;
-    border: 3px solid #73AD21;
-    padding: 10px;
+    float:left;
+    margin: 10px;
+    width: 200px;
+    height: 200px;
+    border-radius: 40%;
 }
 html {
     background-color: black;
     color:aquamarine;
+}
+.p1{
+    color: aquamarine;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+    font-size: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: medium;
 }
