--- a/src/styles.css
+++ b/src/styles.css
@@ -16,11 +16,15 @@
    font-size: medium;
 }
 .img1{ 
-    float:left;
-    margin: 10px;
-    width: 200px;
-    height: 200px;
-    border-radius: 40%;
+   
+   
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    height: 50%;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 html {
     background-color: black;
