--- a/src/styles.css
+++ b/src/styles.css
@@ -13,18 +13,12 @@
     font-size: 25px;
     margin-top: 25px;
     margin-bottom: 25px;
-   font-size: medium;
+   font-size: 30px;
 }
 .img1{ 
    
-   
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    height: 50%;
-    margin-top: 50px;
-    margin-bottom: 50px;
+   border-radius: 10px;
+   float: left;
 }
 html {
     background-color: black;
@@ -34,8 +28,16 @@ html {
     color: aquamarine;
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
+}
+.p2{
+    color: aquamarine;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
     font-size: 20px;
     margin-top: 20px;
     margin-bottom: 20px;
-    font-size: medium;
+}
+.img2{
+    border-radius: 10px;
+    float:inline-end;
 }
