--- a/src/styles.css
+++ b/src/styles.css
@@ -49,3 +49,12 @@ html {
     margin-top: 20px;
     margin-bottom: 20px;
 }
+#headline{
+    text-align: left;
+    padding-left :100px;
+}
+#ul{
+    display: inline-block;
+    width: 321px;
+    vertical-align: top;
+}
