--- a/src/styles.css
+++ b/src/styles.css
@@ -23,23 +23,15 @@
 html {
     background-color: black;
     color:aquamarine;
+   
 }
-.p1{
-    color: aquamarine;
-    font-family: 'Times New Roman', Times, serif;
-    text-align: center;
+.a1{text-align: right;
+
 }
-.p2{
-    color: aquamarine;
-    font-family: 'Times New Roman', Times, serif;
-    text-align: center;
-    font-size: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
+    
 .img2{
     border-radius: 10px;
-    float:inline-end;
+    
 }
 #img-caption{
     color: aquamarine;
@@ -49,12 +41,14 @@ html {
     margin-top: 20px;
     margin-bottom: 20px;
 }
-#headline{
-    text-align: left;
-    padding-left :100px;
+.parent{
+    display: flex;
+    width: 50%;
 }
-#ul{
-    display: inline-block;
-    width: 321px;
-    vertical-align: top;
+.child{
+    flex: 1;
+    margin: 10px;
+}
+.child2{
+    margin-right: 20px;
 }
